--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,18 @@
 <resources>
-    <string name="app_name">Tanaman</string>
+    <string name="app_name">MyPlant</string>
     <string name="login">Login</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="registration">Registration</string>
-    <string name="register">Register</string>
-    <string name="click_to_login">Click to login</string>
-    <string name="click_to_register">Click to register</string>
+    <string name="register">Sign Up</string>
+    <string name="click_to_login">login here</string>
+    <string name="click_to_register">sign up here</string>
     <string name="logout">Logout</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user">User</string>
+    <string name="profile">profile</string>
+    <string name="plant">plant</string>
+    <string name="calendar">calendar</string>
+    <string name="home">home</string>
 </resources>
