--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="plant">plant</string>
     <string name="calendar">calendar</string>
     <string name="home">home</string>
+    <string name="mycalendar">MyCalendar</string>
 </resources>
