feat: add storage dummy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="calendar">calendar</string>
     <string name="home">home</string>
     <string name="mycalendar">MyCalendar</string>
+    <string name="plants">Plants</string>
+    <string name="tanaman">Tanaman</string>
 </resources>
