--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="mycalendar">MyCalendar</string>
     <string name="plants">Plants</string>
     <string name="tanaman">Tanaman</string>
+    <string name="myplant_logo">MyPlant Logo</string>
+    <string name="desc">is currently under development</string>
+    <string name="add_plant">Add Plant</string>
 </resources>
