--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="myplant_logo">MyPlant Logo</string>
     <string name="desc">is currently under development</string>
     <string name="add_plant">Add Plant</string>
+    <string name="save">Save</string>
+    <string name="edit_profile">Edit Profile</string>
 </resources>
