--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="submit">Submit</string>
     <string name="already_have_account">Already have account</string>
     <string name="login_here">Login here</string>
+    <string name="nothing_to_do">Nothing To Do</string>
 </resources>
