--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="user">User</string>
     <string name="profile">profile</string>
+    <string name="name">Name</string>
     <string name="plant">plant</string>
     <string name="calendar">calendar</string>
     <string name="home">home</string>
